--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>
@@ -14,6 +16,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
-    <div id="forTeleport"></div>
   </body>
 </html>
